# learn-cmake

./: CODE_OF_CONDUCT.md  LICENSE  README.md  build.bat  clean.bat  make.bat  run.bat
1-hello-world/: CMakeLists.txt
2-simple-include/: CMakeLists.txt
2-simple-include/include/: Foo.h
3-multi-source/: CMakeLists.txt  main.cpp
3-multi-source/include/: Foo.h
3-multi-source/src/: Foo.cpp
4-static-library/: CMakeLists.txt
4-static-library/lib/Foo/src/: Foo.cpp
5-nested-cmake/: CMakeLists.txt
5-nested-cmake/lib/Foo/: CMakeLists.txt
5-nested-cmake/lib/Foo/src/: Foo.cpp
